[package]
name = "hyperpolyglot"
version = "0.1.0"
authors = ["Connor Monks <monkslc@gmail.com>"]
edition = "2018"
default-run = "hyply"

[dependencies]
clap = "2.33.0"
ignore = "0.4.1"
lazy_static = "1.4.0"
logos = "0.11.0"
pcre2 = "0.2.3"
phf = "0.8"
phf_codegen = "0.8.0"
regex = "1.3.5"
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8"
termcolor = "1.1.0"

[[bin]]
name = "hyply"
path = "src/bin/main.rs"
