[package]
name = "hyperpolyglot"
version = "0.1.7"
authors = ["Connor Monks <monkslc@gmail.com>"]
edition = "2018"
default-run = "hyply"
description = "A fast programming language detector"
homepage = "https://github.com/monkslc/hyperpolyglot"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/monkslc/hyperpolyglot"
exclude = ["samples/", "vendor.yml", "heuristics.yml", "documentation.yml", "languages.yml"]

[workspace]
members = ["crates/py_polyglot_tokenizer"]

[dependencies]
clap = "2.33.0"
ignore = "0.4.1"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
pcre2 = "0.2.3"
phf = "0.11.1"
phf_codegen = "0.11.1"
regex = "1.3.5"
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8"
termcolor = "1.1.0"
polyglot_tokenizer = { path = "crates/polyglot_tokenizer", version = "0.2.1" }

[[bin]]
name = "hyply"
path = "src/bin/main.rs"
