[package]
name = "tokens"
version = "0.1.0"
authors = ["Connor Monks <monkslc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.18.1"
lazy_static = "1.4.0"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }
